# eAgent

./: .gitignore  Cargo.toml  LOG.md  PROJECT_BRIEF.md  STATE.yaml
.cargo/: config.toml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  composerDraftStore.ts  eventBridge.ts  index.css  nativeApi.ts  routeTree.gen.ts  router.ts  session-logic.ts  store.ts  tauriNativeApi.ts  terminalStateStore.ts  threadSelectionStore.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: dto.rs  events.rs  main.rs
apps/desktop/src-tauri/src/commands/: app.rs  eagent.rs  git.rs  mod.rs  orchestration.rs  projects.rs  settings.rs  terminal.rs
apps/desktop/src/components/: AgentTraceView.tsx  ChatView.logic.ts  ChatView.tsx  Composer.tsx  ComposerPromptEditor.tsx  DiffPanel.tsx  DiffPanelShell.tsx  PlanSidebar.tsx  ProviderSetup.tsx  Sidebar.logic.ts  Sidebar.tsx  ThreadTerminalDrawer.tsx  TopBar.tsx
apps/desktop/src/components/chat/: ChatHeader.tsx  ComposerPendingApprovalPanel.tsx  ComposerPendingUserInputPanel.tsx  MessagesTimeline.tsx  ProviderModelPicker.tsx
apps/desktop/src/lib/: utils.ts
apps/desktop/src/routes/: __root.tsx  _chat.$threadId.tsx  _chat.index.tsx  _chat.settings.tsx  _chat.tsx
crates/eagent-contracts/: Cargo.toml
crates/eagent-contracts/src/: config.rs  lib.rs  oversight.rs  provider.rs
crates/eagent-index/: Cargo.toml
crates/eagent-index/src/: file_index.rs  lib.rs  project_graph.rs
crates/eagent-mcp/: Cargo.toml
crates/eagent-mcp/src/: lib.rs  loader.rs  manifest.rs
crates/eagent-persistence/: Cargo.toml
crates/eagent-persistence/src/: config.rs  event_store.rs  lib.rs
crates/eagent-planner/: Cargo.toml
crates/eagent-planner/src/: lib.rs  llm.rs  simple.rs
crates/eagent-protocol/: Cargo.toml
crates/eagent-protocol/src/: events.rs  ids.rs  lib.rs  messages.rs  task_graph.rs  traits.rs
crates/eagent-providers/: Cargo.toml
crates/eagent-providers/src/: api_key.rs  lib.rs  llama_cpp.rs  registry.rs  sse.rs
crates/eagent-providers/src/codex/: mod.rs  protocol.rs
crates/eagent-runtime/: Cargo.toml
crates/eagent-runtime/src/: agent_pool.rs  conflict.rs  engine.rs  error.rs  lib.rs  scheduler.rs
crates/eagent-skills/: Cargo.toml
crates/eagent-skills/src/: lib.rs  loader.rs  manifest.rs
crates/eagent-tools/: Cargo.toml
crates/eagent-tools/src/: documents.rs  filesystem.rs  git.rs  lib.rs  registry.rs  terminal.rs  web.rs
crates/ecode-contracts/: Cargo.toml
crates/ecode-contracts/src/: codex.rs  config.rs  git.rs  ids.rs  lib.rs  orchestration.rs  persistence.rs  provider.rs  provider_runtime.rs  terminal.rs
crates/ecode-core/: Cargo.toml
crates/ecode-core/src/: lib.rs
crates/ecode-core/src/attachments/: mod.rs
crates/ecode-core/src/codex/: mod.rs  version.rs
crates/ecode-core/src/config/: mod.rs
crates/ecode-core/src/git/: mod.rs
crates/ecode-core/src/local_agent/: mod.rs
crates/ecode-core/src/orchestration/: decider.rs  engine.rs  mod.rs  projector.rs
crates/ecode-core/src/persistence/: mod.rs
crates/ecode-core/src/platform/: mod.rs
crates/ecode-core/src/providers/: llama_cpp.rs
crates/ecode-core/src/terminal/: mod.rs
crates/ecode-desktop-app/: Cargo.toml
crates/ecode-desktop-app/src/: lib.rs  runtime.rs  state.rs
crates/ecode-gui/: Cargo.toml
crates/ecode-gui/src/: app.rs  main.rs  state.rs  theme.rs
crates/ecode-gui/src/panels/: chat_panel.rs  mod.rs  project_picker.rs  right_panel.rs  settings.rs  sidebar.rs  status_bar.rs  terminal_panel.rs  top_bar.rs
crates/ecode-gui/src/widgets/: markdown.rs  mod.rs  shared.rs
docs/: portable-windows.md
docs/plans/: 2026-03-15-ecode-t3-baseline.md  2026-03-16-codex-ui-refresh.md  2026-03-16-tauri-react-migration.md
docs/superpowers/plans/: 2026-03-18-phase1-scaffolding.md  2026-03-18-phase2-extract.md
docs/superpowers/specs/: 2026-03-18-eagent-platform-design.md  2026-03-20-eagent-foundation-first-design.md
output/pdf/: 2026-03-16-ai-ui-designer-prompt.md
output/pdf/research/: notes.md
scripts/: build-portable.ps1  generate_ui_research_pdf.py
tmp/: bing-codex-search.html
