[package]
name = "eagent-index"
description = "Project graph, symbol index, and codebase understanding for eAgent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eagent-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
