[package]
name = "eagent-tools"
description = "Tool trait, registry, and built-in tool implementations for eAgent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eagent-protocol = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
regex = "1"
reqwest = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
