[package]
name = "ecode-contracts"
description = "Shared domain types, schemas, and protocol definitions for eCode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
