[package]
name = "ecode-desktop-app"
description = "Toolkit-neutral desktop runtime/controller for eCode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecode-contracts = { workspace = true }
ecode-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
