[package]
name = "ecode-gui"
description = "Native desktop GUI for eCode - an agentic coding application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ecode"
path = "src/main.rs"

[dependencies]
ecode-contracts = { workspace = true }
ecode-core = { workspace = true }
ecode-desktop-app = { workspace = true }

# GUI
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }

# Markdown
pulldown-cmark = { workspace = true }

# Syntax highlighting (for code blocks)
syntect = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Config & IDs
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Native file dialog
rfd = { workspace = true }

# Image
image = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
